--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   --borderColor: hsl(0, 0%, 83%);
   --whiteColorDream: hsl(0, 0%, 93%);
   --greyBg: hsl(0, 0%, 96%);
-  --greyText: hsl(145, 145, 145);
+  --greyText: rgb(145, 145, 145);
   --inputColor: hsl(330, 12%, 97%);
   --boxShadow: box-shadow: rgba(0,0,0,0.1) 0px 10px 15px -3px, rgba(0,0,0,0.05) 0px 4px 6px -2px;
   --transition: .4s ease-in-out;
@@ -284,29 +284,29 @@ h2 {
 }
 
 /* support */
-.support .sectionContainer .tittleDiv{
+.support .sectionContainer .tittleDiv {
   text-align: center;
 }
 
-.tittleDiv small{
-  letter-spacing: .8rem;
+.tittleDiv small {
+  letter-spacing: 0.8rem;
   text-transform: uppercase;
   font-size: 13px;
   color: var(--blackColor);
   line-height: 1.5rem;
 }
 
-.support .sectionContainer .infoDiv{
+.support .sectionContainer .infoDiv {
   margin-top: 2rem;
   gap: 1.5rem;
 }
 
-.infoDiv .textDiv{
+.infoDiv .textDiv {
   gap: 1.5rem;
 }
 
-.textDiv .singleInfo .number{
-  background: var(--PrimaryColor);
+.textDiv .singleInfo .number {
+  background: var(--color, var(--PrimaryColor));
   padding: 5px 12px;
   width: 40px;
   border-radius: 3rem;
@@ -316,19 +316,15 @@ h2 {
   color: var(--whiteColor);
 }
 
-.textDiv .singleInfo .colorOne{
-  background: var(--colorOne);
+.textDiv .singleInfo .number:not() .textDiv .singleInfo {
+  background: var(--color);
 }
 
-.textDiv .singleInfo .colorTwo{
-  background: var(--colorTwo);
-}
-
-.imgDiv{
+.imgDiv {
   margin: auto;
 }
 
-.imgDiv img{
+.imgDiv img {
   width: 100%;
   max-width: 420px;
   border-radius: 15px;
@@ -339,19 +335,19 @@ h2 {
   background: var(--SecondaryColor);
 }
 
-.inforContainer .titleDiv{
+.inforContainer .titleDiv {
   flex-direction: column;
   text-align: center;
   gap: 1.5rem;
   justify-content: space-between;
 }
 
-.inforContainer .cardsDiv{
+.inforContainer .cardsDiv {
   gap: 1.5rem;
   margin-top: 3rem;
 }
 
-.cardsDiv .singleCard{
+.cardsDiv .singleCard {
   background: var(--whiteColor);
   padding: 3rem 2rem;
   border-radius: 10rem;
@@ -363,7 +359,7 @@ h2 {
   max-width: 250px;
 }
 
-.singleCard .iconDiv{
+.singleCard .iconDiv {
   justify-content: center;
   margin: auto;
   background: var(--PrimaryColor);
@@ -373,23 +369,275 @@ h2 {
   border-radius: 3rem;
 }
 
-.singleCard .iconDiv .icon{
+.singleCard .iconDiv .icon {
   color: var(--whiteColor);
 }
 
-.singleCard .cardTitle{
+.singleCard .cardTitle {
   color: var(--blackColor);
   font-weight: 700;
 }
 
-.singleCard .colorOne{
+.singleCard .colorOne {
   background: var(--colorOne);
 }
 
-.singleCard .colorTwo{
+.singleCard .colorTwo {
   background: var(--colorTwo);
 }
 
+/* lounge  */
+.lounge .sectionContainer {
+  gap: 1.5rem;
+}
+
+.lounge .sectionContainer .imgDiv {
+  width: 100%;
+  position: relative;
+  height: 250px;
+  margin: auto;
+}
+
+.imgDiv .image1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.imgDiv .image2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.lounge .textDiv .grids {
+  margin-top: 1rem;
+  gap: 1.5rem;
+}
+
+.lounge .grids .singleGrid .gridTitle {
+  display: block;
+  padding-bottom: 0.5rem;
+  font-weight: 500;
+  color: var(--blackColor);
+}
+
+/* travelers */
+.travelers .sectionContainer {
+  text-align: center;
+}
+
+.travelers .travelersContainer {
+  margin-top: 1rem;
+  gap: 1.5rem;
+}
+
+.travelers .singleTraveler {
+  position: relative;
+  height: 320px;
+  width: 85%;
+  max-width: 250px;
+  overflow: hidden;
+  border-radius: 10rem;
+  gap: 1rem;
+  margin: auto;
+}
+
+.singleTraveler .destinationImage,
+.travelerImage,
+.travelerName {
+  position: absolute;
+}
+
+.singleTraveler .destinationImage {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  object-fit: cover;
+}
+
+.singleTraveler .travelerImage {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  bottom: 30px;
+  left: 40%;
+  transform: translateX(-50%);
+  border: 5px solid rgba(225, 225, 225, 0.637);
+  transition: var(--transition);
+  animation: animated 2.3s infinite;
+}
+
+@keyframes animated {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(8px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.singleTraveler .travelerName {
+  bottom: -100%;
+  width: 100%;
+  height: max-content;
+  background: var(--whiteColor);
+  padding: 1.5rem;
+  transition: var(--transition);
+  animation: animatedBorders 2.3s infinite;
+}
+
+@keyframes animatedBorders {
+  0% {
+    border-radius: 0rem;
+  }
+  50% {
+    border-radius: 2rem;
+  }
+  100% {
+    border-radius: 0rem;
+  }
+}
+
+.travelerName span {
+  color: black;
+  display: block;
+  font-weight: 700;
+}
+
+.travelerName p {
+  color: var(--PrimaryColor);
+  font-style: italic;
+}
+
+.singleTraveler:hover .travelerName {
+  bottom: 0;
+  transition: 1s ease-in-out;
+}
+
+.singleTraveler:hover .travelerImage {
+  bottom: 110px;
+  transition: 1s ease-in-out;
+}
+
+/* subcribe */
+.subcribe {
+  background: var(--SecondaryColor);
+}
+
+.subcribe .sectionContainer {
+  text-align: center;
+}
+
+.subcribe .inputDiv {
+  margin-top: 1rem;
+  flex-direction: column;
+  background: var(--whiteColor);
+  border-radius: 1rem;
+}
+
+.subcribe .inputDiv input {
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 1rem 0.5rem;
+  &::placeholder {
+    font-size: 13px;
+    opacity: 0.5;
+  }
+}
+
+.subcribe .inputDiv .btn {
+  width: 100%;
+  cursor: pointer;
+}
+
+/* footer */
+
+.footer {
+  background-color: var(--SecondaryColor);
+}
+
+.footer .sectionContainer {
+  gap: 2.5rem;
+}
+
+.footer .gridOne {
+  gap: 1rem;
+  justify-content: center;
+  margin: auto;
+}
+
+.gridOne .logoDiv .logo {
+  width: 20%;
+}
+
+.gridOne .socialIcon {
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+.gridOne .socialIcon .icon {
+  height: 50px;
+  width: 30px;
+  border-radius: 10rem;
+  border: 1px solid var(--borderColor);
+  box-shadow: var(--boxShadow);
+  padding: 0.4rem;
+  color: var(--greyText);
+
+  &:hover {
+    background: var(--PrimaryColor);
+    transform: translateY(-7px);
+    transition: var(--transition);
+    border: 1px solid var(--PrimaryColor);
+    color: var(--whiteColor);
+  }
+}
+
+.footerLinks {
+  display: grid;
+}
+
+.footerLinks .linkTitle {
+  color: var(--blackColor);
+  font-weight: 500;
+  display: block;
+  padding-bottom: 1rem;
+}
+
+.footerLinks li a {
+  display: block;
+  color: var(--greyText);
+  transition: var(--transition);
+  padding: 0.3rem 0;
+  &:hover {
+    transform: translateX(7px);
+    color: var(--PrimaryColor);
+  }
+}
+
+.copyRightDiv {
+  justify-content: center;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  gap: 1rem;
+  border-top: 1px solid var(--greyText);
+  text-align: center;
+}
 
 @media screen and (max-width: 768px) {
   .navBarMenu {
@@ -442,5 +690,336 @@ h2 {
   .showNavBar {
     right: 50%;
     transition: 0.5s ease-in-out;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  /* lounge */
+  .lounge .sectionContainer .imgDiv {
+    height: 300px;
+  }
+
+  /* support  */
+  .support .sectionContainer .imgDiv {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  /* home */
+  .home {
+    padding-top: 12rem;
+  }
+
+  /* search */
+  .search .sectionContainer .seachInputs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* traveler */
+  .travelers .sectionContainer .travelersContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* subcribe  */
+  .subcribe .sectionContainer {
+    max-width: 80%;
+    margin: auto;
+  }
+
+  .subcribe .sectionContainer .inputDiv {
+    flex-direction: row;
+    padding: 0 0.5rem;
+    border-radius: 3rem;
+  }
+
+  /* lounge */
+  .lounge .sectionContainer .imgDiv {
+    height: 350px;
+  }
+
+  /* support  */
+  .support .sectionContainer .imgDiv {
+    width: 100%;
+  }
+
+  .support .sectionContainer .imgDiv img {
+    max-width: 100%;
+  }
+
+  /* footer */
+  .footer .sectionContainer {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: flex-end;
+  }
+
+  .footer .footerLinks {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 570px) {
+  .home .mainText {
+    width: 80%;
+  }
+
+  .home .homeImages .video {
+    border-radius: 15rem;
+  }
+
+  .home .homeImages .plane {
+    position: absolute;
+    width: 95%;
+    top: -8%;
+  }
+
+  .search .sectionContainer .btn {
+    border-radius: 1rem;
+    flex-direction: row;
+  }
+
+  .support .sectionContainer .infoDiv .textDiv {
+    margin-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .infor .inforContainer .titleDiv {
+    flex-direction: row;
+  }
+
+  .titleDiv h2 {
+    text-align: left;
+    max-width: 500px;
+  }
+
+  .infor .inforContainer .cardsDiv {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lounge .sectionContainer .imgDiv {
+    height: 380px;
+  }
+
+  .lounge .sectionContainer .textDiv .grids {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .subcribe .sectionContainer .inputDiv {
+    justify-content: space-between;
+  }
+
+  .subcribe .sectionContainer .btn {
+    max-width: max-content;
+  }
+
+  .footer .sectionContainer {
+    padding-top: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer .sectionContainer .footerLinks {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .home .mainText {
+    width: 80%;
+  }
+
+  .home .homeImages .videoDiv {
+    width: 80%;
+  }
+
+  .home .homeImages .video {
+    width: 100%;
+    height: 100%;
+    border-radius: 15rem;
+  }
+
+  .home .homeImages .plane {
+    position: absolute;
+    width: 95%;
+    top: -8%;
+  }
+
+  .search .sectionContainer .seachInputs {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .search .sectionContainer .btn {
+    border-radius: 3rem;
+    flex-direction: row;
+  }
+
+  .support .sectionContainer .infoDiv .textDiv {
+    margin-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .infor .inforContainer .titleDiv {
+    flex-direction: row;
+  }
+
+  .titleDiv h2 {
+    text-align: left;
+    max-width: 500px;
+  }
+
+  .infor .inforContainer .cardsDiv {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lounge .sectionContainer .imgDiv {
+    height: 380px;
+  }
+
+  .lounge .sectionContainer .textDiv .grids {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .subcribe .sectionContainer .inputDiv {
+    justify-content: space-between;
+  }
+
+  .subcribe .sectionContainer .btn {
+    max-width: max-content;
+  }
+
+  .footer .sectionContainer {
+    padding-top: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .footer .sectionContainer .footerLinks {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .home .mainText {
+    width: 80%;
+  }
+
+  .home .homeImages .videoDiv {
+    width: 80%;
+  }
+
+  .home .homeImages .video {
+    width: 100%;
+    height: 100%;
+    border-radius: 15rem;
+  }
+
+  .home .homeImages .plane {
+    position: absolute;
+    width: 95%;
+    top: -8%;
+  }
+
+  .navBar {
+    align-items: center;
+  }
+
+  .navBar .navBarOne .none {
+    display: flex;
+    gap: 1.5rem;
+  }
+
+  .navBar .navBarOne .none li {
+    font-size: 13px;
+    gap: 0.5rem;
+    color: var(--textColor);
+    &:hover {
+      color: var(--PrimaryColor);
+      text-decoration: underline;
+    }
+  }
+
+  .navBar .navBarTwo {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navBarTwo .logoDiv .logo {
+    max-width: 20%;
+  }
+
+  .navBarTwo .menu {
+    flex-direction: row;
+    gap: 0.5rem;
+  }
+
+  .navBarTwo .menu .listItem {
+    padding: 0 0.5rem;
+    font-size: 14px;
+    cursor: pointer;
+    color: var(--textColor);
+    font-weight: 700;
+
+    &:hover {
+      color: var(--PrimaryColor);
+      font-weight: 700;
+    }
+  }
+
+  .navBarTwo .navBarMenu {
+    display: flex;
+  }
+
+  .navBarTwo .btnOne,
+  .toggleIcon {
+    display: none;
+  }
+
+  .search .sectionContainer .seachInputs {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .search .sectionContainer .btn {
+    border-radius: 3rem;
+    flex-direction: row;
+  }
+
+  .support .sectionContainer .infoDiv .textDiv {
+    margin-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .infor .inforContainer .titleDiv {
+    flex-direction: row;
+  }
+
+  .titleDiv h2 {
+    text-align: left;
+    max-width: 500px;
+  }
+
+  .infor .inforContainer .cardsDiv {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lounge .sectionContainer .imgDiv {
+    height: 380px;
+  }
+
+  .lounge .sectionContainer .textDiv .grids {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .subcribe .sectionContainer .inputDiv {
+    justify-content: space-between;
+  }
+
+  .subcribe .sectionContainer .btn {
+    max-width: max-content;
+  }
+
+  .footer .sectionContainer {
+    padding-top: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .footer .sectionContainer .footerLinks {
+    justify-content: center;
   }
 }
